Handle Shift-TAB correctly in wxOSX/Carbon wxComboBox.

The navigation event direction should depend on Shift key state.

See #3821.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73054 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775